--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.2.0",
     "react-transition-group": "^4.4.1",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "uuid": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
