--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-validator": "^6.5.0",
     "morgan": "^1.10.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
