--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
+    "mongoose": "^5.9.16",
     "morgan": "^1.10.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
