--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
     "mongoose": "^5.9.16",
+    "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
