--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongoose": "^5.9.16",
     "mongoose-unique-validator": "^2.0.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.2.0",
